WL-3326 : Hook up Lessons to Mneme (vs Samigo)
4 main changes here:
Enable the “optional” profile in tool/pom.xml
Remove the bits about Assignments 2 and Yaft in opt-applicationContext.xml
Set right version numbers and dependency type in main pom.xml
Change context.xmls to use MnemeEntity rather than SamigoEntity

--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -256,6 +256,9 @@
  in shared/lib, so you want the scope to be "provided".
 -->
 
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
         <repositories>
           <!-- 
                To enable YAFT, MNEME, and Assignments 2, uncomment the repository, dependencies and plugin below.
