--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
     <!-- the scopes should be compile if you don't actually have the tool, or provided if you do -->
 
       <sakai.yaft.version>1.3.0-SNAPSHOT</sakai.yaft.version>
-      <sakai.yaft.scope>provided</sakai.yaft.scope>
-      <sakai.mneme.version>2.1.2</sakai.mneme.version>
+      <sakai.yaft.scope>compile</sakai.yaft.scope>
+      <sakai.mneme.version>${mneme.version}</sakai.mneme.version>
       <sakai.mneme.scope>provided</sakai.mneme.scope>
       <sakai.assignment2.version>1.0-rc-1</sakai.assignment2.version>
-      <sakai.assignment2.scope>provided</sakai.assignment2.scope>
+      <sakai.assignment2.scope>compile</sakai.assignment2.scope>
 
     </properties>
 
